--- a/index.html
+++ b/index.html
@@ -7,40 +7,20 @@
   <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <div class="test">1</div>
-    <div class="test">2</div>
-    <div class="test">3</div>
 
-    <div id="pai">
-      <div class="filho">1</div>
-      <div class="mae">2</div>
-      <div class="filho">2</div>
-      <div class="mae">2</div>
-      <div class="filho">3</div>
-    </div>
 
-    <div id="paizao">
-      <div class="filho">alo</div>
-      <div class="filho">oi</div>
-      <div class="filho">ola</div>
-    </div>
 
-    <p>oi</p>
-  <p>olá</p>
+
 
   <script>
+    let png = document.createElement('img');
+    let par = document.createElement('p');
 
-    let n = document.getElementById('pai').querySelectorAll('.filho').length;
-    console.log(n);
+    par.innerHTML = 'olá, tudo bem?'
 
-    if( document.getElementById('pai').querySelectorAll('.filho').length > 2){
-      console.log('ok')
-    }else{
-      console.log('negativo')
-    }
-
-    console.log( document.querySelectorAll('.test') )
-    console.log( document.getElementById('pai').querySelectorAll('.filho') )
+    png.src = 'http://lorempixel.com/400/200/sports/';
+    console.log(png, par);
+    console.log( document.createElement('div') )
 
   </script>  
 </body>
