--- a/index.html
+++ b/index.html
@@ -8,20 +8,41 @@
 </head>
 <body>
 
+  <div id="nissan">
 
-
+  </div>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo quos ex odit repudiandae ea odio iste doloremque, quas recusandae iure perferendis dolor hic aspernatur quis ipsam voluptate. Mollitia, est quam?</p>
+  <br><br>
+  <div class="coisa">
+  </div>
+  
+  <!-- <button onclick="document.getElementById('nissan').removeChild(sentra)">remove</button> -->
+  <button id="btn1" onclick="remove()">remove</button>
 
 
   <script>
-    let png = document.createElement('img');
-    let par = document.createElement('p');
 
-    par.innerHTML = 'olá, tudo bem?'
+    let versa = document.createElement('p');
+    let sentra = document.createElement('p');
+    let image = document.createElement('img');
+    let image2 = document.createElement('img');
 
-    png.src = 'http://lorempixel.com/400/200/sports/';
-    console.log(png, par);
-    console.log( document.createElement('div') )
+    image.src = 'https://loremflickr.com/320/240';
+    image2.src = 'https://loremflickr.com/g/320/240/paris'
+    versa.innerHTML = 'versa';
+    sentra.innerHTML = 'sentra';
 
+    document.getElementById('nissan').appendChild(versa);
+    document.getElementById('nissan').appendChild(sentra);
+    document.getElementById('nissan').appendChild(image);
+    // document.getElementsByClassName('coisa')[0].appendChild(image2);
+ 
+    function remove(){
+      document.getElementById('nissan').removeChild(sentra);
+      // document.getElementById('btn1').style.visibility = 'hidden'
+      document.getElementById('btn1').hidden = true;''
+    }
+    
   </script>  
 </body>
 </html>
