aulas 14 e 15: objetos e arrays

--- a/index.html
+++ b/index.html
@@ -8,25 +8,45 @@
 </head>
 <body>
 
-  <div id="linux">
-    linux 0
-    <div class="ubuntu">
-      Ubuntu 1
-      <div class="elementaryos">
-        Elementary OS 1a
-      </div>
-    </div>
 
-    <div class="debian">
-      Debian 2
-    </div>
-  </div>
   
+
+
+
+
+
+
+
+  
+
   <script>
-    console.log( document.querySelector('.elementaryos').parentNode.parentNode.parentNode.parentNode )
-    console.log( document.querySelector('.elementaryos'))
-    console.log( document.querySelector('.debian').parentNode)
-    
+
+    let array = [ 'francis', ['dados', ['Minas Gerais']] ]
+    console.log(array[1][1][0])
+
+    // let array = [ 'francis', ['dados', ['Minas Gerais']] ]
+    // console.log(array[1][1][0])
+
+    // let array = ['francis', 49, 'Belo Horizonte', {nome: 'Mundão'}];
+    // console.log(array[3].nome)
+
+    // let carro = {
+    //   placa: 'ADD-4423',
+    //   modelo: 'Sedã',
+    //   marca: 'Hyndai',
+    //   opicionais: {
+    //     cambio: 'automatico',
+    //     combustivel: 'flex',
+    //     extra: {
+    //       leasing: 'Itau',
+    //       cidade: 'Paraguassu'
+    //     }
+    //   },
+    //   "outra coisa": "podicr3333"
+    // };
+
+    // console.log(carro["outra coisa"])
+
   </script>  
 </body>
 </html>
