--- a/index.html
+++ b/index.html
@@ -5,33 +5,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Keven Jesus jQuery</title>
   <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+
+  <style>
+    /* tbody >tr:hover {  background-color: #cccccc; } */
+    td { height: 30px; }
+    .tractive { background-color: blue; }
+    .link {  color: red;  }
+  </style>
 </head>
 <body>
+  <a href="#" id="link">
+    <h3>Olá humanos, tudo bem?</h3>
+  </a>
 
-  <!-- <h4>Meu botão</h4>
-  <button id="btn1">click</button> -->
-
-
-
-<h4 id="tit">Meu Botão</h4>
-<button id="bt">Click</button>
-
-
-
-
-  
+  <table style="width: 100%;">
+    <thead>
+      <th align="left">Nome</th>
+      <th align="left">Idade</th>
+    </thead>
+    <tbody>
+      <tr class="tr">
+        <td>Alien</td>
+        <td>2000</td>
+      </tr>
+      <tr class="tr">
+        <td>Bixo papão</td>
+        <td>1000</td>
+      </tr>
+    </tbody>
+  </table>
+<!-- ------------------------------------   -->
   <script>
+    let i = 0, link = document.getElementById('link');
+    let trs = document.getElementsByClassName('tr');
+    let x = trs.length; 
 
-    let head = document.getElementById('tit');
-    let btn = document.getElementById('bt');
-    btn.addEventListener('click', function(){
-      console.log('click');
-      head.remove();
-    })
+    link.addEventListener('mouseover', function(){
+      console.log('mouseover');
+      link.classList.add('link')     })
 
-    // window.onload = function(){
-    //   console.log('ok!')
-    // }
+    link.addEventListener('mouseleave', function(){
+      link.classList.remove('link')     })
+
+    for(i ; i < x; i++ ){
+      console.log(trs[i]);
+      
+      trs[i].addEventListener('mouseover', function(){
+        // console.log(this);
+        this.classList.add('tractive');
+      });
+
+      trs[i].addEventListener('mouseleave', function(){
+        this.classList.remove('tractive');
+      })
+    }
 
   </script>  
 </body>
