--- a/index.html
+++ b/index.html
@@ -6,59 +6,21 @@
   <title>Keven Jesus jQuery</title>
   <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 
-  <style>
-    /* tbody >tr:hover {  background-color: #cccccc; } */
-    td { height: 30px; }
-    .tractive { background-color: blue; }
-    .link {  color: red;  }
-  </style>
 </head>
 <body>
-  <a href="#" id="link">
-    <h3>Olá humanos, tudo bem?</h3>
-  </a>
 
-  <table style="width: 100%;">
-    <thead>
-      <th align="left">Nome</th>
-      <th align="left">Idade</th>
-    </thead>
-    <tbody>
-      <tr class="tr">
-        <td>Alien</td>
-        <td>2000</td>
-      </tr>
-      <tr class="tr">
-        <td>Bixo papão</td>
-        <td>1000</td>
-      </tr>
-    </tbody>
-  </table>
-<!-- ------------------------------------   -->
+  <input type="text" id="nome">
+  <input type="text" id="sobrenome">
+
+  <!-- ------------------------------------   -->
   <script>
-    let i = 0, link = document.getElementById('link');
-    let trs = document.getElementsByClassName('tr');
-    let x = trs.length; 
+    let nome = document.getElementById('nome');
+    let sobrenome = document.getElementById('sobrenome');
 
-    link.addEventListener('mouseover', function(){
-      console.log('mouseover');
-      link.classList.add('link')     })
-
-    link.addEventListener('mouseleave', function(){
-      link.classList.remove('link')     })
-
-    for(i ; i < x; i++ ){
-      console.log(trs[i]);
-      
-      trs[i].addEventListener('mouseover', function(){
-        // console.log(this);
-        this.classList.add('tractive');
-      });
-
-      trs[i].addEventListener('mouseleave', function(){
-        this.classList.remove('tractive');
-      })
-    }
+    nome.addEventListener('blur', function(){
+      console.log('deu blur');
+      sobrenome.value = this.value
+    })
 
   </script>  
 </body>
