--- a/index.html
+++ b/index.html
@@ -5,53 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Keven Jesus jQuery</title>
   <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-  <style>
-    .error {border: 2px solid red;}
-  </style>
 </head>
 <body>
 
-  <form action="#" method="post">
-    <input type="text" name="name" value="francis">
-    <input type="email" name="email" value="falecom@quasar.com.br">
-    <button type="submit">ENTER</button>
-  </form>
+  <p class="p1">Lorem1</p>
+  <p>Lorem.</p>
+  <p id="p2">Ok</p>
+  <p data-aula="p3"></p>
 
 
 
-
+  <script src="./js/jquery-3.5.1.min.js"></script>
   <script>
-    let form1 = document.querySelector('form'), i=0;
-
-    form1.addEventListener('submit', function(e){
-      e.preventDefault();
-      let isvalid = true;
-      i=0;
-      for(i; i < this.elements.length; i++){
-        // let item = this.elements[i].type == 'input' ? this.elements[i] :
-        let item = this.elements[i];
-        if (item.type !== 'submit'){
-          console.log(item.type);
-
-          if (item.value==''){
-            item.classList.add('error');
-            isvalid = false;
-          }else{
-            item.classList.remove('error');
-          } 
-        }
-      }
-
-      console.log(isvalid);
-
-      // console.log(this.elements);
-      // this.elements.name.value;
-      // this.elements.email.value;
-      // ...
-    })
-        
-
-  </script>
-  
+    // let p1 = document.querySelector('.p1');
+    let p1 = $('.p1');
+    let p2 = $('#p2').get(0);   // let p2 = $('#p2')[0];
+    // console.log(p1);
+    console.log(p2);
+    p1.remove();
+  </script>  
 </body>
 </html>
