--- a/index.html
+++ b/index.html
@@ -5,24 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Keven Jesus jQuery</title>
   <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="./css/app.css">
+
 </head>
 <body>
 
-  <p class="p1">Lorem1</p>
-  <p>Lorem.</p>
-  <p id="p2">Ok</p>
-  <p data-aula="p3"></p>
-
+  <div class="box"></div>
+  <hr>
 
 
   <script src="./js/jquery-3.5.1.min.js"></script>
   <script>
-    // let p1 = document.querySelector('.p1');
-    let p1 = $('.p1');
-    let p2 = $('#p2').get(0);   // let p2 = $('#p2')[0];
-    // console.log(p1);
-    console.log(p2);
-    p1.remove();
+    let box = $('.box');
+    // box.animate({ 
+    //   width: '200px', 
+    //   height: '200px',
+    //   left: '500px'   }, 5000);
+    
+    // box.show(); 
+    // box.hide();
+    // box.fadeIn();
+    // box.fadeOut();
+    // box.fadeIn(1000);
   </script>  
 </body>
 </html>
