--- a/index.html
+++ b/index.html
@@ -7,28 +7,47 @@
   <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./css/app.css">
 </head>
-
 <body>
+  <form action="#">
+    <label for="cep">CEP</label>
+    <input type="text" name="cep" id="cep" placeholder="00000-000">
+
+    <label for="logradouro">Logradouro</label>
+    <input type="text" name="logradouro" id="logradouro" placeholder="Av,rua,nº">
+
+    <button type="submit">Enviar</button>  
+  </form>
+    <br><br><br>
   
- <ul>
-   <li><a class="link active" href="#">Home</a></li>
-   <li><a class="link" href="#">Empresa</a></li>
-   <li><a class="link" href="#">Projetos</a></liclass=>
-   <li><a class="link" href="#">Contato</a></li=>
- </ul> 
+    <div class="result"></div>
 
   <script src="./js/jquery-3.5.1.min.js"></script>
   <script>
-    // AddClass -> https://api.jquery.com/addClass/ 
-    // RemoveClass -> https://api.jquery.com/removeClass/
+    // Serialize -> https://api.jquery.com/serialize
+    // Serialize Array -> https://api.jquery.com/serializeArray/
 
-    let link = $('.link');
 
-    link.on('click', function(){
-      link.removeClass('active');
-      $(this).addClass('active');
+    let form = $('form');
+    let result = $('.result');
+
+    form.on('submit', function(e){
+      e.preventDefault();
+      // console.log('teste');
+
+      let data = $(this).serializeArray();
+      // let data = $(this).serialize();
+      // console.log(data);
+      // result.text(data);
+      let alterado = JSON.stringify(data);
+      $('.result').text(alterado);
+      console.log(data);
     })
 
+    // podemos utilzar o stringify para transformar o resultado OBJECT em text:
+    // var serializado = $(this).serializeArray();
+    // var alterado = JSON.stringify(serializeArray);
+    // $(".resultado_array").text(alterado);
+    // Ele mostra exatamente o objeto no html.
   </script>  
 </body>
 </html>
