--- a/index.html
+++ b/index.html
@@ -8,46 +8,23 @@
   <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
-  <form action="#">
-    <label for="cep">CEP</label>
-    <input type="text" name="cep" id="cep" placeholder="00000-000">
 
-    <label for="logradouro">Logradouro</label>
-    <input type="text" name="logradouro" id="logradouro" placeholder="Av,rua,nº">
+  <div class="container">
+    <div class="item"></div>
+  </div>
 
-    <button type="submit">Enviar</button>  
-  </form>
-    <br><br><br>
-  
-    <div class="result"></div>
 
   <script src="./js/jquery-3.5.1.min.js"></script>
   <script>
-    // Serialize -> https://api.jquery.com/serialize
-    // Serialize Array -> https://api.jquery.com/serializeArray/
+  // Documentação position -> https://api.jquery.com/position/
+  // Documentação offset - > https://api.jquery.com/offset/
 
+    let container = $('.container');
+    let item = $('.item');
+    // let posItem = item.position(); //pos cerca elem pai
+    let posItem = item.offset();   //posicionamento global (browser)
 
-    let form = $('form');
-    let result = $('.result');
-
-    form.on('submit', function(e){
-      e.preventDefault();
-      // console.log('teste');
-
-      let data = $(this).serializeArray();
-      // let data = $(this).serialize();
-      // console.log(data);
-      // result.text(data);
-      let alterado = JSON.stringify(data);
-      $('.result').text(alterado);
-      console.log(data);
-    })
-
-    // podemos utilzar o stringify para transformar o resultado OBJECT em text:
-    // var serializado = $(this).serializeArray();
-    // var alterado = JSON.stringify(serializeArray);
-    // $(".resultado_array").text(alterado);
-    // Ele mostra exatamente o objeto no html.
+    console.log(posItem.left, posItem.top);
   </script>  
 </body>
 </html>
